Resolve unwanted layout overlaps with style tweaks

--- a/src/styles/components/_app.scss
+++ b/src/styles/components/_app.scss
@@ -15,7 +15,7 @@ $app_headerHeight: 50px;
 		background-color: $_white;
 		box-shadow: $_shadow;
 		position: relative;
-		z-index: $_z-index-1;
+		z-index: $_z-index-2;
 
 		.mainLogo {
 			margin: auto auto auto $_gutter;
@@ -26,6 +26,7 @@ $app_headerHeight: 50px;
 	&__content {
 		height: calc(100% - #{$app_headerHeight});
 		position: relative;
+		z-index: $_z-index-1;
 	}
 
 }
