--- a/src/styles/components/_tale.scss
+++ b/src/styles/components/_tale.scss
@@ -41,6 +41,7 @@ $tale-taleChoice-transitionDuration: 0.2s;
 		position: absolute;
 		left: 10%;
 		width: 90%;
+		overflow: hidden;
 	}
 
 	.taleMap {
